--- a/Cart.html
+++ b/Cart.html
@@ -190,7 +190,8 @@
             <a href="#" class="mb-3 d-block mx-2 shop-today">Shop today's deals</a>
 
             <div class="sign-up-now">
-              <a href="#" class="account mx-2">Sign in to your account</a>
+              <a href="#" class="account mx-2 mb-4">Sign Now Now Now Now  </a>
+              <!-- in to your account -->
               <a href="#" class="sign-now">Sign up now</a>
 
             </div>
