--- a/Cart.html
+++ b/Cart.html
@@ -192,7 +192,7 @@
             <div class="sign-up-now">
               <a href="#" class="account mx-2 mb-4">Sign Now </a>
               <!-- in to your account -->
-              <a href="#" class="sign-now">Sign up now</a>
+              <a href="#" class="sign-now">Sign up </a>
 
             </div>
           </div>
